infrastructure/kyverno/kyverno-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: limit-ingress-allow-egress-all
  namespace: longhorn-system
spec:
  podSelector: {}
  egress:
  - {}
  ingress:
  - from:
    - podSelector: {} 
  policyTypes:
  - Ingress
  - Egress
